# webextension_pattern-rs

./: Cargo.toml  README.md
.github/workflows/: publish_crate.yml
src/: lib.rs
