[package]
name = "webextension_pattern"
description = "Intuitive URL pattern matching as used by Firefox WebExtensions and by Chrome"
keywords = ["url", "match", "pattern", "link", "manifest"]
categories = ["parser-implementations", "web-programming"]
version = "0.2.0"
authors = ["Jørgen Tjernø <jorgenpt@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/jorgenpt/webextension_pattern-rs/"
repository = "https://github.com/jorgenpt/webextension_pattern-rs/"

[dependencies]
regex = "^1"
regex-syntax = "^0.6"
thiserror = "^1"
url = "^2.2"
serde = { version = "1.0", optional = true, features = ["derive"] }